Fix header alignment bugs

--- a/templates/style.css
+++ b/templates/style.css
@@ -17,6 +17,7 @@ a:hover {
 }
 
 h1 {
+    text-align: center;
     font-size: 2.5em;
 }
 
@@ -44,6 +45,7 @@ header #right {
 }
 
 header #right a{
+    text-align: right;
     margin-right: 2em;
 }
 
